refactor: change how sonar support was implemented